test/force-app/main/default/objects/Depreciation_Allocation__c/Depreciation_Allocation__c.object-meta.xml
<CustomObject>
    <label>Depreciation Allocation</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Depreciation Allocations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>