test/force-app/main/default/objects/Depreciation_Allocation__c/fields/Allocation_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Allocation_Percentage__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Allocation Percentage</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>