test/force-app/main/default/objects/Depreciation_Allocation__c/fields/Depreciation_Breakdown__c.field-meta.xml
<CustomField>
    <fullName>Depreciation_Breakdown__c</fullName>
    <label>Depreciation Breakdown</label>
    <referenceTo>Depreciation_Breakdown__c</referenceTo>
    <relationshipLabel>Depreciation Allocations</relationshipLabel>
    <relationshipName>Depreciation_Allocations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>