test/force-app/main/default/objects/Depreciation_Allocation__c/fields/Lifetime__c.field-meta.xml
<CustomField>
    <fullName>Lifetime__c</fullName>
    <label>Lifetime</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Depreciation_Lifetime</valueSetName>
    </valueSet>
</CustomField>