test/force-app/main/default/objects/Depreciation_Allocation__c/fields/Method__c.field-meta.xml
<CustomField>
    <fullName>Method__c</fullName>
    <label>Method</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Depreciation_Method</valueSetName>
    </valueSet>
</CustomField>